// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hideTableOfContents action 1`] = `
Object {
  "type": "HIDE_TABLE_OF_CONTENTS",
}
`;

exports[`showTableOfContents action 1`] = `
Object {
  "type": "SHOW_TABLE_OF_CONTENTS",
}
`;

exports[`updateTableOfContents action 1`] = `
Object {
  "data": Array [
    Object {
      "href": "item-1.html",
      "title": "item 1",
    },
    Object {
      "href": "item-2.html",
      "title": "item 2",
    },
  ],
  "type": "UPDATE_TABLE_OF_CONTENTS",
}
`;
